@@ -1,6 +1,9 @@
 0.8.2: (16/11/2019)
 * Fixed the shown total being 807 instead of 809. (missing Meltan and Melmetal)
-* Fixed Meltan/Melmetal not being counted/shown by removing an old temporary fix.
+* Fixed Meltan/Melmetal not being counted/shown. (removed the old temporary fix)
+* Fixed several legendaries not showing as such in "/pd remaining".
+* Fixed several Pokémon names in "/pd remaining" showing internal names directly. (e.g. "TypeNull" vs. "Type: Null")
+* Made "/pd remaining" also show Ultra Beasts in yellow, at the end of the list.
 
 0.8.1: (24/04/2019)
 * Changed the "# has been added to your account" message to show _what_ it gave you.
